Spinner margin top to avoid overlap with search input

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 #spinner {
   display: inline-block;
+  margin-top: 50px;
   width: 50px;
   height: 50px;
   border: 3px solid rgba(0,0,0,.3);
